--- a/openmrs-client/src/main/res/values/styles.xml
+++ b/openmrs-client/src/main/res/values/styles.xml
@@ -2,7 +2,11 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+        <item name="android:windowNoTitle">true</item>
+    </style>
+
+    <style name="UrlDialog" parent="android:style/Theme.Dialog">
+        <item name="android:windowNoTitle">true</item>
     </style>
 
 </resources>
